Fix refresh button alignment Firefox/Linux

--- a/files/app/resource/css/admin.css
+++ b/files/app/resource/css/admin.css
@@ -1029,6 +1029,7 @@ label.switch
 #firmware-refresh,
 #package-refresh
 {
+    display: flex;
     width: 24px;
     height: 24px;
     margin: calc(var(--font-base-size) / 2 - 6px) 0 0 4px;
